# joto

./: CONTRIBUTING.md  COPYING  INSTALL  LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  libjotocoinconsensus.pc.in  libsovconsensus.pc.in
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
build-aux/m4/: joto_find_bdb48.m4  joto_qt.m4  jotocoin_find_bdb48.m4  jotocoin_qt.m4  jotocoin_subdir_to_include.m4  sov_subdir_to_include.m4
contrib/: README.md  joto-qt.pro  jotocoin-qt.pro  jotocoind.bash-completion  qt_translations.py  sovd.bash-completion  tidy_datadir.sh
contrib/debian/: README.md  changelog  control  copyright  joto-qt.lintian-overrides  rules  watch  (+19 more)
depends/: Makefile  README.md  config.site.in  description.md
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  guide-startmany.md  init.md  instantsend.md  keepass.md  masternode-budget.md  masternode_conf.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
joto-docs/: protocol-documentation.md
jotocoin-docs/: protocol-documentation.md
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  addressindex.h  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  bip39.h  bip39_english.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  dbwrapper.cpp  dbwrapper.h  dsnotificationinterface.h  governance-classes.cpp  (+93 more)
src/bench/: .gitignore  bench.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/config/: jotocoin-config.h.in  sov-config.h.in
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha512.h
src/drafted/: governance-categories.h  governance-classes.h  governance-keys.cpp  governance-keys.h  governance-types.cpp  governance-types.h
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  darksendconfig.cpp  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  joto-qt.files  joto.cpp  joto.qrc  joto_locale.qrc  jotoaddressvalidator.h  jotoamountfield.cpp  jotocoin-qt.files  jotocoin.cpp  jotocoin.qrc  jotocoin_locale.qrc  jotocoinaddressvalidator.cpp  jotocoinaddressvalidator.h  jotocoinamountfield.cpp  jotocoinamountfield.h  jotocoingui.cpp  jotocoingui.h  jotocoinstrings.cpp  jotocoinunits.cpp  jotocoinunits.h  jotogui.cpp  (+71 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  darksendconfig.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  settingspage.ui  signverifymessagedialog.ui  toolspage.ui
src/qt/locale/: joto_bg.ts  joto_de.ts  joto_es.ts  joto_fi.ts  joto_fr.ts  joto_ja.ts  joto_pl.ts  joto_pt.ts  joto_sk.ts  joto_vi.ts  joto_zh_TW.ts  jotocoin_bg.ts  jotocoin_de.ts  jotocoin_en.ts  jotocoin_es.ts  jotocoin_fi.ts  jotocoin_fr.ts  jotocoin_it.ts  jotocoin_ja.ts  jotocoin_pl.ts  jotocoin_pt.ts  jotocoin_ru.ts  jotocoin_sk.ts  jotocoin_sv.ts  jotocoin_vi.ts  jotocoin_zh_CN.ts  jotocoin_zh_TW.ts  sov_en.ts  sov_it.ts  sov_ru.ts  sov_sv.ts  sov_zh_CN.ts
src/qt/res/: jotocoin-qt-res.rc  sov-qt-res.rc
src/qt/res/bb/css/: light.css
src/qt/res/css/: drkblue.css  light  light-hires.css
src/qt/test/: Makefile  compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.h  governance.cpp  masternode.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  server.cpp  server.h
src/script/: interpreter.cpp  interpreter.h  jotocoinconsensus.cpp  jotocoinconsensus.h  jotoconsensus.h  script.h  script_error.h  sigcache.h  sign.h  sovconsensus.cpp  standard.cpp  standard.h
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bip39_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  cachemap_tests.cpp  cachemultimap_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  governance_validators_tests.cpp  hash_tests.cpp  joto-util-test.py  jotocoin-util-test.py  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  (+27 more)
src/test/data/: README.md  jotocoin-util-test.json  proposals-invalid.json  proposals-valid.json  sov-util-test.json
src/univalue/lib/: univalue_escapes.h
src/wallet/: crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+136 files in other folders)
